# careeros-idea2impact

./: .dockerignore  .env.example  .gitattributes  .gitignore  .safety-policy.yml  DEPLOYMENT_RUNBOOK.md  Dockerfile  Dockerfile.allinone  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_DEPLOYMENT.md  deploy.sh  docker-compose.allinone.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.qdrant-cloud.yml  docker-compose.unified.yml  docker-compose.yml  package-lock.json  package.json  run_tests.cjs
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/data/: golden_queries.json  golden_queries_real.json
backend/scripts/: benchmark_evaluation.py  benchmark_providers.py  benchmark_retrieval.py  cleanup_duplicate_call_requests.py  cleanup_greenhouse_duplicates.py  dry_run_theirstack.py  reclassify_india_jobs.py  reclassify_job_locations.py  reclassify_job_role_experience.py  run_pytest_orchestration.py  safe_alert_eval.py  scan_mocks.py  seed_learning_resources.py  seed_public_demo.py  simulate_traces.py  validate_runtime.py  validate_twilio_mcp.py  verify_demo_rag_index.py  visualize_graph.py
backend/seeds/: learning_resources.json
backend/src/: main.py
backend/tests/: conftest.py  pg_test.py  test_agent_governance.py  test_agent_governance_layer.py  test_agent_scoring.py  test_arq_worker.py  test_autonomous_engagement.py  test_call_alert_threshold.py  test_call_safety.py  test_career_events.py  test_chunking_pipeline.py  test_ci_import_smoke.py  test_demo_rag.py  test_demo_user_seed.py  test_health.py  (+71 more)
(+744 files in other folders)
