[tool.poetry]
name = "careeros-backend"
version = "1.0.0"
description = "CareerOS Enterprise FastAPI Backend"
authors = ["Architecture Team"]
package-mode = false

[tool.poetry.dependencies]
aioboto3 = "^13.1.1"
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.6.1"
redis = "^4.6.0"
qdrant-client = "^1.9.1"
langgraph = "^0.0.69"
langchain-anthropic = "^0.1.15"
alembic = "^1.13.1"
arq = "^0.26.0"
aiofiles = "^24.1.0"
langsmith = "^0.1.77"
gliner = "^0.1.11"
pymupdf = "^1.24.4"
python-docx = "^1.1.2"
pytesseract = "^0.3.10"
pillow = "^10.3.0"
langchain-text-splitters = "^0.2.2"
pyjwt = "^2.8.0"
mcp = "^1.2.0"
python-multipart = "^0.0.9"
bcrypt = "^4.0.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.20.0"
slowapi = "^0.1.9"
rank-bm25 = "^0.2.2"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
pytest-mock = "^3.15"
httpx = "^0.28"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring external services such as Postgres, Redis, Twilio, ElevenLabs, LangSmith, or external LLMs",
    "slow: slow tests not required for fast CI",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
